--- a/portafolio-judith/src/index.css
+++ b/portafolio-judith/src/index.css
@@ -1,6 +1,3 @@
-@import "tailwindcss";
-
-@config {
-  content: ["./index.html",
-  "./src/**/*.{js,ts,jsx,tsx}"];
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
